--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="styleEP.css">
 <link rel="stylesheet" href="animate.css">
 
-<title>Cryptocurrency | Project 1</title>
+<title>Crypto Clubhouse | Project 1</title>
 
 </title>
 </head>
